Nova seção: "Cielo App Data"

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -2115,6 +2115,80 @@ Caso você desenvolvedor não encontre o erro nesta tabela, abra um ticket para 
 
 [Clique Aqui](https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/suporte)
 
+### Cielo App Data
+
+Com a API Cielo App Data o desenvolvedor de um app poderá ter acesso à informações de compra dos seus aplicativos em um determinado terminal LIO.
+
+#### Geração do Token
+
+Para isso é necessário, previamente, gerar o API Token no Dev Console, que será usado na API App Data. Para geração do token siga o seguinte passo à passo:
+
+1. Acesse e faça o seu login no Dev Console através do [link](https://www.cieloliostore.com.br)
+2. Na aba **Apps públicos** selecione o Ap desejado
+3. Clique na aba **API Token** e depois no botão **Gerar Token**
+4. Uma vez o token gerado, copie e guarde o mesmo.
+
+**Endpoint:** https://cieloliostore-api.m4u.com.br/api/v1/me
+
+#### HTTP Headers
+
+Todas as chamadas da API Cielo App Data necessitam que o API Token gerado no Dev Console esteja presente no Header das requisições:
+
+* **Token:** Identificação do token de acesso, que armazena informações do App Público que deseja informações.
+
+#### HTTP Query Parameters
+
+Complementando o Header das requisições, a API Cielo App Data necessita que todas as chamadas contenham o EC (Número do Estabelecimento Comercial) e o Número Lógico (identificador do terminal LIO) nas suas requisições:
+
+* **ec:** Identificação do Estabelecimento Comercial desejado para consulta.
+* **logic_number:** Identificação do Terminal LIO desejado para consulta.
+
+#### API
+
+> **GET** / Detalhes de um produto
+
+**ec** (required in query parameter) - “String”
+**logic_number** (required in query parameter) - “String”
+**token** (required in header) - “String”
+
+Exemplo de resposta:
+
+```
+{
+    "app": {
+      "name": "string",
+      "package_name": "string"
+    },
+    "purchase": {
+        "status": "SUBSCRIBED",
+        "plan": {
+            "id": "string",
+            "name": "string",
+            "value": 0
+        },
+        "created_at": "string"
+    },
+    "payment": {
+        "status": "PENDING"
+    }
+}
+```
+
+#### Opções de retorno por campo
+
+**purchase.status:** “SUBSCRIBED” | “UNSUBSCRIBED”
+**payment.status:** “PENDING” | “AT_RECURRENCE” | “PAID” | “OBLIGOR” | “CANCELED” | “CIELO_PURCHAASE”
+
+**purchase.status:** “SUBSCRIBED”
+**purchase.status:** “UNSUBSCRIBED”
+
+**payment.status:** “PENDING” (Pagamentos com status pendente)
+**payment.status:** “AT_RECURRENCE”  (Pagamentos com status em recorrência)
+**payment.status:** “PAID” (Pagamentos com status pago)
+**payment.status:** “OBLIGOR” (Status do pagamento como inadimplente)
+**payment.status:** “CANCELED” (Pagamentos cancelados)
+**payment.status:** “CIELO_PURCHASE” (pagamentos isentos(compras de teste/desenvolvimento))
+
 ## Aplicativos Próprios
 
 Os aplicativos próprios atendem especificamente aqueles desenvolvedores que desejam disponibilizar seu aplicativo apenas para alguns lojistas específicos. O aplicativo próprio não é disponibilizado na Cielo Store e nem utilizado por outros lojistas que não tenham sido solicitados pelo desenvolvedor.
