Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1604,6 +1604,7 @@ Nessa forma de pagamento, é necessário apenas fazer a chamada do método envia
 | primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
 | secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
 | installments | Número de parcelas. | `Long` |
+| email | Email informado | `String` |
 | paymentListener | Callback de pagamento | `cielo.sdk.order.payment.PaymentListener` |
 
 **Fluxo da transação utilizando o pagamento direto da Cielo LIO**
