Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1610,7 +1610,7 @@ Nessa forma de pagamento, é necessário apenas fazer a chamada do método envia
 **Fluxo da transação utilizando o pagamento direto da Cielo LIO**
 
 ```java
-orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments,  paymentListener);
+orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments, email, paymentListener);
 ```
 
 Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com email:
