--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1185,7 +1185,7 @@ Exemplo de informação enviada pelo Order Manager
 
 |||||
 |---|---|---|---|
-|[![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android)| [![C#](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/03-sdk-csharp.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP)  | [![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/04-sdk-java.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java)  |  [![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/07-sdk-php.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP) |
+|[![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android) | [![C#](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/03-sdk-csharp.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP)  | [![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/04-sdk-java.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java)  |  [![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/07-sdk-php.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP) |
 
 ---
 
@@ -1594,7 +1594,7 @@ Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parc
 
 ### 5. Pagamento informando email
 
-Exatamente como o método anterior, com a diferença que neste caso é possível informar o email para facilitar o preenchimento na hora de enviar o comprovante para o cliente. Caso queira utilizar essa função para realizar outro tipo de pagamento que não o parcelado, basta informar os códigos primários desejados e informar **0** no número de parcelas.
+Exatamente como o método anterior, com a diferença que neste caso é possível informar o email para facilitar o preenchimento na hora de enviar o comprovante para o cliente.
 Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
 
 | Atributo        | Descrição  | Domínio|
