Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1594,7 +1594,7 @@ Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parc
 
 ### 5. Pagamento informando email
 
-Exatamente como o método anterior, com a diferença que neste caso é possível informar o email para facilitar o preenchimento na hora de enviar o comprovante para o cliente.
+Neste caso é possível informar o email para facilitar o preenchimento na hora de enviar o comprovante para o cliente.
 Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
 
 | Atributo        | Descrição  | Domínio|
