--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1515,7 +1515,54 @@ Nessa forma de pagamento é possível enviar qualquer valor a ser pago (valor to
 Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento de valor:
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-valor.jpg)
 
-### 3. Pagamento direto
+### 3. Pagamento parcelado
+
+Para efetuar um pagamento parcelado, é preciso consultar as formas de pagamento utilizando a função disponibilizada no SDK, escolher crédito no produto primário e crédito no produto secundário **obrigatoriamente** e informar o número de parcelas no momento do checkout. É importante lembrar que se os códigos de pagamento forem informados incorretamente ou se o número de parcelas não for maior do que **0**, o sistema acusará erro.
+Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
+
+| Atributo        | Descrição  | Domínio|
+|-----------------|--------------------|-----------------------------------------|
+| orderId         | O identificador do pedido a ser pago. | `String` |
+| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
+| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
+| secondaryCode | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
+| installments | Número de parcelas. | `Long` |
+| paymentListener | Callback de pagamento. | `cielo.sdk.order.payment.PaymentListener` |
+
+**Fluxo da transação utilizando o pagamento parcelado da Cielo LIO**
+
+```java
+orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments,  paymentListener);
+```
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcelado:
+![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
+
+### 4. Pagamento informando email
+
+Neste caso é possível informar o email para facilitar o preenchimento na hora de enviar o comprovante para o cliente.
+Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
+
+| Atributo        | Descrição  | Domínio|
+|-----------------|--------------------------------------------------------------------------------------------------|-----------------------------------------|
+| orderId         | O identificador do pedido a ser pago. | `String` |
+| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
+| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
+| secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
+| installments | Número de parcelas. | `Long` |
+| email | Email informado | `String` |
+| paymentListener | Callback de pagamento | `cielo.sdk.order.payment.PaymentListener` |
+
+**Fluxo da transação utilizando o pagamento direto da Cielo LIO**
+
+```java
+orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments, email, paymentListener);
+```
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com email:
+![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
+
+### 5. Pagamento direto
 
 No Pagamento Direto, o valor a ser pago e a forma de pagamento (crédito, débito, parcelado) será definido dentro da aplicação do parceiro. Na sequência o fluxo de pagamento da Cielo LIO é iniciado (inserir o cartão, digitar a senha e visualizar e/ou enviar por e-mail comprovante).
 
@@ -1558,6 +1605,8 @@ Nessa forma de pagamento é possível enviar qualquer valor a ser pago e a forma
 | value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
 | primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
 | secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
+| installments (**não obrigatório**) | Número de parcelas. | `Long` |
+| email (**não obrigatório**) | Email informado | `String` |
 | paymentListener | Callback de pagamento. | `cielo.sdk.order.payment.PaymentListener` |
 
 **Fluxo da transação utilizando o pagamento direto da Cielo LIO**
@@ -1568,53 +1617,6 @@ orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, paymentLi
 
 Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento de valor:
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-direto.jpg)
-
-### 4. Pagamento parcelado
-
-Para efetuar um pagamento parcelado, é preciso consultar as formas de pagamento utilizando a função disponibilizada no SDK, escolher crédito no produto primário e crédito no produto secundário **obrigatoriamente** e informar o número de parcelas no momento do checkout. É importante lembrar que se os códigos de pagamento forem informados incorretamente ou se o número de parcelas não for maior do que **0**, o sistema acusará erro.
-Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
-
-| Atributo        | Descrição  | Domínio|
-|-----------------|--------------------|-----------------------------------------|
-| orderId         | O identificador do pedido a ser pago. | `String` |
-| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
-| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
-| secondaryCode | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
-| installments | Número de parcelas. | `Long` |
-| paymentListener | Callback de pagamento. | `cielo.sdk.order.payment.PaymentListener` |
-
-**Fluxo da transação utilizando o pagamento parcelado da Cielo LIO**
-
-```java
-orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments,  paymentListener);
-```
-
-Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcelado:
-![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
-
-### 5. Pagamento informando email
-
-Neste caso é possível informar o email para facilitar o preenchimento na hora de enviar o comprovante para o cliente.
-Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
-
-| Atributo        | Descrição  | Domínio|
-|-----------------|--------------------------------------------------------------------------------------------------|-----------------------------------------|
-| orderId         | O identificador do pedido a ser pago. | `String` |
-| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
-| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
-| secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
-| installments | Número de parcelas. | `Long` |
-| email | Email informado | `String` |
-| paymentListener | Callback de pagamento | `cielo.sdk.order.payment.PaymentListener` |
-
-**Fluxo da transação utilizando o pagamento direto da Cielo LIO**
-
-```java
-orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments, email, paymentListener);
-```
-
-Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com email:
-![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
 
 ## Cancelamento
 
