Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1593,7 +1593,7 @@ SecondaryProduct secondaryProduct = primaryProduct.getSecondaryProducts().get(0)
 String primaryCode = primaryProduct.getCode();
 String secondaryCode = secondaryProduct.getCode();
 
-orderManager.checkoutOrder(orderId, primaryCode, secondaryCode paymentListener);
+orderManager.checkoutOrder(orderId, primaryCode, secondaryCode, paymentListener);
 
 ```
 
