Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1244,6 +1244,7 @@ Para a versão release, adicione o módulo do Cielo LIO Order Manager SDK nas de
 ```
 compile 'com.cielo.lio:order-manager:0.17.15'
 ```
+última versão 0.17.14 - lançada em 15/02/2017
 
 > A partir da versão 1.17.7-beta do SDK se tornou necessária a permissão de INTERNET na aplicação cliente.
 Adicione essa permissão ao `AndroidManifest.xml` da sua aplicação.
