Updated '_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
@@ -105,8 +105,14 @@ A Cielo dispõe de coleções padrões para suas APIs. Você pode importa-las di
 
 Para realizar a importação basta:
 
-1. Acessar a área do manual onde o link da Coleção está disponível e copia-lo
-  a. IMPORTANTE: para que a sua coleção sempre esteja atualizada, sugerimos que sempre busque a ultima versão da coleção no manual. O link NÃO ATUALIZA A COLEÇÃO IMPORTADA AUTOMATICAMENTE
+1. Acessar a [área deste tutorial](https://developercielo.github.io/tutorial/postman#collections-e-environments-cielo5) onde o link da Coleção está disponível e copia-lo 
+
+<br>
+
+***IMPORTANTE:** para que a sua coleção sempre esteja atualizada, sugerimos que sempre busque a ultima versão da coleção no manual. O link NÃO ATUALIZA A COLEÇÃO IMPORTADA AUTOMATICAMENTE
+
+<br>
+
 2. Com o Postman aberto, use o botão IMPORT, e selecione a opção "IMPORT FROM LINK".
 
 ![]({{ site.baseurl_root }}/images/p5.png)
