Updated '_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
@@ -105,7 +105,7 @@ A Cielo dispõe de coleções padrões para suas APIs. Você pode importa-las di
 
 Para realizar a importação basta:
 
-1. Acessar a [área deste tutorial](https://developercielo.github.io/tutorial/postman#collections-e-environments-cielo5) onde o link da Coleção está disponível e copia-lo 
+1. Acessar a [área deste tutorial](https://developercielo.github.io/tutorial/postman#collections-e-environments-cielo5) onde o link da Coleção está disponível e copiá-lo 
 
 <br>
 
