--- a/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
@@ -183,17 +183,17 @@ Abaixo, listamos as collections e os Environments Cielo. Use-as em seu Postman p
 
 ### Api Cielo Ecommerce
 
-* **Collection** -  <https://www.getpostman.com/collections/139520c8fe2210654d7c>
+* **Collection** -  https://www.getpostman.com/collections/139520c8fe2210654d7c
 
-|Ambiente|URLs|
+|Ambiente|Endpoints|
 |---|---|
 |Sandbox|**Envio de transação**:  https://apisandbox.cieloecommerce.cielo.com.br <br> **Consulta transação**: https://apiquerysandbox.cieloecommerce.cielo.com.br/|
 |Produção|**Envio de transação**: https://api.cieloecommerce.cielo.com.br/ <br> **Consulta transação**: https://apiquery.cieloecommerce.cielo.com.br/|
 
 ### Checkout Cielo
 
-* **Collection**  -  <https://www.getpostman.com/collections/97969ec643738aac42f4>
+* **Collection**  - https://www.getpostman.com/collections/97969ec643738aac42f4
 
-|Ambiente|URLs|
+|Ambiente|Endpoints|
 |---|---|
 |Produção|**Envio de transação**: https://cieloecommerce.cielo.com.br/api|
