Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1242,10 +1242,10 @@ Após configurar um novo projeto no Android Studio, é necessário incluir a dep
 Para a versão release, adicione o módulo do Cielo LIO Order Manager SDK nas dependências do Gradle:
 
 ```
-compile 'com.cielo.lio:order-manager:0.17.15'
+compile 'com.cielo.lio:order-manager:0.17.16'
 ```
 
-última versão 0.17.14 - lançada em 15/02/2017
+última versão 0.17.15 - lançada em 19/02/2018
 
 > A partir da versão 1.17.7-beta do SDK se tornou necessária a permissão de INTERNET na aplicação cliente.
 Adicione essa permissão ao `AndroidManifest.xml` da sua aplicação.
@@ -1534,7 +1534,7 @@ Nessa forma de pagamento, é necessário apenas fazer a chamada do método envia
 **Fluxo da transação utilizando o pagamento parcelado da Cielo LIO**
 
 ```java
-orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments,  paymentListener);
+orderManager.checkoutOrder(orderId, value, installments,  paymentListener);
 ```
 
 Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcelado:
@@ -1564,7 +1564,33 @@ orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installme
 Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com email:
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
 
-### 5. Pagamento direto
+### 5. Pagamento informando EC
+
+Esse método é disponibilizado para o caso de ser necessário efetuar um pagamento em um EC diferente do configurado na LIO.
+Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
+
+| Atributo        | Descrição  | Domínio|
+|-----------------|--------------------------------------------------------------------------------------------------|-----------------------------------------|
+| orderId         | O identificador do pedido a ser pago. | `String` |
+| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
+| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
+| secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
+| installments | Número de parcelas. | `Long` |
+| email | Email informado | `String` |
+| merchantCode | Número do EC | `String` |
+| paymentListener | Callback de pagamento | `cielo.sdk.order.payment.PaymentListener` |
+
+**Fluxo da transação utilizando o pagamento direto da Cielo LIO**
+
+```java
+orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments, email, merchantCode,paymentListener);
+```
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com email:
+![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
+
+
+### 6. Pagamento direto
 
 No Pagamento Direto, o valor a ser pago e a forma de pagamento (crédito, débito, parcelado) será definido dentro da aplicação do parceiro. Na sequência o fluxo de pagamento da Cielo LIO é iniciado (inserir o cartão, digitar a senha e visualizar e/ou enviar por e-mail comprovante).
 
