Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1566,7 +1566,7 @@ Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com 
 
 ### 5. Pagamento informando EC
 
-Esse método é disponibilizado para o caso de ser necessário efetuar um pagamento em um EC diferente do configurado na LIO.
+Esse método é disponibilizado para o caso de ser necessário efetuar um pagamento em um EC diferente do principal. O EC informado deve estar configurado na LIO na hora da inicialização para que funcione ou o SDK irá enviar uma exceção do tipo `InvalidParameterException`.
 Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
 
 | Atributo        | Descrição  | Domínio|
