Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -34,7 +34,7 @@ Ambos os modelos foram desenvolvidos pela Cielo pensando em atender as necessida
 
 Enquanto a LIO V1 possui um design mais compacto e permite uma maior mobilidade, a LIO V2 foi concebida em um tamanho maior e possui algumas funcionalidades exclusivas e adicionais como por exemplo:
 
-**Impressora térmica**: o cliente poderá ter a 1ª e 2ª via impressa após o pagamento realizado. Além disso, as aplicações parceiras poderão utilizar os métodos disponíveis da impressora para imprimir dados importantes ou necessários para o negócio do cliente.
+**Impressora térmica**: o cliente poderá ter a 1ª e 2ª via impressa após o pagamento realizado. Além disso, 0.as aplicações parceiras poderão utilizar os métodos disponíveis da impressora para imprimir dados importantes ou necessários para o negócio do cliente.
 
 Especificação da Bobina:
 Papel Azul 48 gramas, Comprimento: 12 metros, Diâmetro máximo: 30 milímetros, Largura: 57 milímetros.
@@ -1242,7 +1242,7 @@ Após configurar um novo projeto no Android Studio, é necessário incluir a dep
 Para a versão release, adicione o módulo do Cielo LIO Order Manager SDK nas dependências do Gradle:
 
 ```
-compile 'com.cielo.lio:order-manager:0.18.2'
+compile 'com.cielo.lio:order-manager:0.18.3'
 ```
 
 última versão 0.17.15 - lançada em 19/02/2018
