--- a/_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-risco.md
+++ b/_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-risco.md
@@ -8,6 +8,7 @@ tags:
   - Gestão de Risco
 language_tabs:
   json: JSON
+  shell: cURL
 ---
 
 # Gateway AF - ReD Shield
@@ -581,3 +582,137 @@ curl
 | Payment.FraudAnalysis.ReplyData.FactorCode            | Texto  | 255     | Código retornado do provider indicando o faotres que influenciaram na Análise de Fraude.                                                            |
 | Payment.FraudAnalysis.ReplyData.ReturnMessage         | Texto  | 255     | Descrição do código retornado pelo provider                                                                                                         |
 | Payment.FraudAnalysis.ReplyData.ProviderTransactionId | Texto  | 255     | Identificador da transação no provedor Antifraude.                                                                                                  |
+
+# Tabelas originais
+
+| CAMPOS | TIPO | TAMANHO | OBRIGATÓRIO | DESCRIÇÃO | ANTIFRAUDE REDSHIELD |
+|-------------|--------|----------------|--------------------|----------------|-----------------------------------|
+| MerchantOrderId | Texto | 50 | Sim | Numero de identificação do Pedido. | Obrigatório |
+| Customer |  |  | Não | Nó contendo os dados do cliente |  |
+| Customer.Name | Texto | 255 | Não | Nome do Comprador. | ObrigatórioNome e Sobrenome |
+| Customer.Identity | Texto | 18 | Não | Número do RG, CPF, CNPJ ou Passaporte do Cliente. | Obrigatório |
+| Customer.IdentityType | Texto | 25 | Não | Tipo de documento de identificação do comprador (RG/CFP/CNPJ/Passaporte) | Opcional |
+| Customer.Email | Texto | 255 | Não | Email do Comprador. | Opcional |
+| Customer.Phone | Texto | 15 | Não | Telefone do Comprador | Opcional |
+| Customer.Mobile | Texto | 15 | Não | Celular do Comprador | Opcional |
+| Customer.WorkPhone | Texto | 15 | Não | Telefone de trabalho do Comprador | Opcional |
+| Customer.Birthdate | Date | 10 | Não | Data de nascimento do Comprador. Formato: YYYY-MM-DD | Opcional |
+| Customer.Status | Texto | - | Não | Status de cadastro do comprador na loja.NEW - Cliente novo efetuando a primeira compraEXISTING - Cliente existente | Opcional |
+| Customer.Address | - | - | Não | Nó contendo dados do Endereço do Comprador. | Opcional |
+| Customer.Address.Street | Texto | 255 | Não | Endereço do Comprador. | - |
+| Customer.Address.Number | Texto | 15 | Não | Número do endereço do Comprador. | - |
+| Customer.Address.Complement | Texto | 50 | Não | Complemento do endereço do Comprador. | - |
+| Customer.Address.District | Texto | 50 | Não | Distrito ou Bairro do endereço do Comprador. | - |
+| Customer.Address.ZipCode | Texto | 9 | Não | CEP do endereço do Comprador. | - |
+| Customer.Address.City | Texto | 50 | Não | Cidade do endereço do Comprador. | - |
+| Customer.Address.State | Texto | 2 | Não | Estado do endereço do Comprador. | - |
+| Customer.Address.Country | Texto | 35 | Não | Pais do endereço do Comprador. | - |
+| Customer.DeliveryAddress | - | - | Não | Nó contendo os dados do Endereço de Entrega. | Opcional |
+| Customer.DeliveryAddress.Street | Texto | 255 | Não | Endereço de Entrega. | Opcional |
+| Customer.DeliveryAddress.Number | Texto | 15 | Não | Número do endereço do Entrega. | Opcional |
+| Customer.DeliveryAddress.Complement | Texto | 50 | Não | Complemento do endereço de Entrega. | Opcional |
+| Customer.DeliveryAddress.District | Texto | 50 | Não | Distrito ou Bairro do endereço de Entrega. | Opcional |
+| Customer.DeliveryAddress.ZipCode | Texto | 9 | Não | CEP do endereço de Entrega. | Opcional |
+| Customer.DeliveryAddress.City | Texto | 50 | Não | Cidade do endereço de Entrega. | Opcional |
+| Customer.DeliveryAddress.State | Texto | 2 | Não | Estado do endereço de Entrega. | Opcional |
+| Customer.DeliveryAddress.Country | Texto | 35 | Não | Pais do endereço de Entrega. | OpcionalDeve seguir a ISO 3166-1, com 2 caracteres. |
+| Customer.BillingAddress | - | - | Não | Nós contendo os dados do Endereço de Cobrança | Opcional |
+| Customer.BillingAddress.Street | Texto | 255 | Não | Endereço de Cobrança. | Opcional |
+| Customer.BillingAddress.Number | Texto | 15 | Não | Número do endereço de Cobrança. | Opcional |
+| Customer.BillingAddress.Complement | Texto | 50 | Não | Complemento do endereço de Cobrança. | Opcional |
+| Customer.BillingAddress.District | Texto | 50 | Não | Distrito ou Bairro do endereço de Cobrança. | Opcional |
+| Customer.BillingAddress.ZipCode | Texto | 9 | Não | CEP do endereço de Cobrança. | Opcional |
+| Customer.BillingAddress.City | Texto | 50 | Não | Cidade do endereço de Cobrança. | Opcional |
+| Customer.BillingAddress.State | Texto | 2 | Não | Estado do endereço de Cobrança. | Opcional |
+| Customer.BillingAddress.Country | Texto | 35 | Não | Pais do endereço de Cobrança. | OpcionalDeve seguir a ISO 3166-1, com 2 caracteres. |
+| Payment |  |  | Sim | Nó contendo as informações de Pagamento | Obrigatório |
+| Payment.Type | Texto | 100 | Sim | Tipo do Meio de Pagamento (CreditCard / DebitCard / EletronicTransfer / Boleto) | - |
+| Payment.Amount | Número | 15 | Sim | Valor do pedido em centavos. | Obrigatório |
+| Payment.Currency | Texto | 3 | Não | Moeda na qual o pagamento será realizado. Valor padrão: BRL | OpcionalValor Padrão: BRL |
+| Payment.Country | Texto | 3 | Não | Pais no qual o pagamento será feito. Valor padrão: BR | - |
+| Payment.Provider | Texto | 15 | - | Nome do Meio de Pagamento. Não obrigatório para Cartão de Crédito. | - |
+| Payment.ServiceTaxAmount | Número | 15 | Não | Exclusivo para companhias aéreas - Montante do valor da autorização que deve ser destinado à taxa de serviço. Obs.: Esse valor não é adicionado ao valor da autorização. | - |
+| Payment.Installments | Número | 2 | Sim | Número de Parcelas | - |
+| Payment.Interest | Texto | 10 | Não | Tipo de parcelamento - Loja (ByMerchant) ou Cartão (ByIssuer). Valor padrão: ByMerchant | - |
+| Payment.SoftDescriptor | Texto | 13 | Não | Texto que será impresso na fatura bancária do portador. Disponível apenas para VISA / MASTER. Não permite caracteres especiais. | - |
+| Payment.Capture | Booleano | - | Não | Define se a autorização deve ser capturada automaticamente. Default: false | - |
+| Payment.Authenticate | Booleano | - | Não | Define se o comprador será direcionado ao Banco emissor para autenticação do cartão. Default: false | - |
+| Payment.CreditCard |  |  | Sim | Nó contendo as informações do Cartão | Obrigatório |
+| Payment.CreditCard.CardNumber | Texto | 16 | Sim | Número do Cartão do Comprador. | Obrigatório |
+| Payment.CreditCard.Holder | Texto | 25 | Não | Nome do Comprador impresso no cartão. | Obrigatório |
+| Payment.CreditCard.ExpirationDate | Texto | 7 | Sim | Data de validade do cartão. | Obrigatório |
+| Payment.CreditCard.SecurityCode | Texto | 4 | Não | Código de segurança impresso no verso do cartão. | Obrigatório |
+| Payment.CreditCard.SaveCard | Booleano | - | Não | Identifica se o cartão será salvo para gerar o CardToken. Valor padrão: false | - |
+| Payment.CreditCard.Brand | Texto | 10 | Sim | Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover). | Obrigatório |
+| Payment.FraudAnalysis |  |  |  | Nó contendo as informações para Análise de Fraude | Obrigatório |
+| Payment.FraudAnalysis.Sequence | Texto | - | Não | Define a ordem de execução da análise de fraude. Valor padrão: AnalyseFirstAnalyseFirst - efetua a análise de fraude antes de enviar para autorizaçãoAuthorizeFirst - efetua a atutorização antes de realizar a análise de fraude | Opcional |
+| Payment.FraudAnalysis.SequenceCriteria | Texto | - | Não | Define, de acordo com a sequência, se prosseguirá ou não com o fluxo. Valor padrão: AlwaysAlways - Para o fluxo AnalyseFirst, segue com a autorização independente do resultado da análise de fraude. Para o fluxo AuthorizeFirst, segue com a análise de fraude independente do resultado da autorização.OnSuccess - Para o fluxo AnalyseFirst, segue com a autorização somente se a análise de fraude retornar "Accept"". Para o fluxo AuthorizeFirst, segue com a análise de fraude somente se a transação for autorizada." | Opcional |
+| Payment.FraudAnalysis.FingerPrintId | Texto | 50 | Não | Identificador utilizado para cruzar informações obtidas pelo Browser do internauta com os dados enviados para análise. Este mesmo valor deve ser passado na variável SESSIONID do script do DeviceFingerPrint. | - |
+| Payment.FraudAnalysis.Provider | Texto | 12 | Não | Identifica o provedor da Solução de Análise de Fraude (CyberSource / RedShield). Valor padrão: CyberSource | Obrigatório(RedShield) |
+| Payment.FraudAnalysis.CaptureOnLowRisk | Booleano | - | Não | Captura a transação se a análise de fraude retornar "Accept". Valor padrão: false. | Opcional |
+| Payment.FraudAnalysis.VoidOnHighRisk | Booleano | - | Não | Cancela a transação se a análise de fraude retornar "Reject". Valor padrão: false. | Opcional |
+| Payment.TotalOrderAmount | Número | 255 | Não | Valor total do pedido em centavos. É utilizado pelo provedor Antifraude quando o comprador dividir o pagamento. Ex: Pagamento com dois cartões. | Obrigatório |
+| Payment.OrderDate | Date | 255 | Não | Data do pedido. Formato: YYYY-MM-DDTHH:MM:SSSZ | Obrigatório |
+| Payment.FraudAnalysis.IsRetryTransaction | Booleano | - | Não | Indica se é uma retentativa de autorização. | Opcional |
+| Payment.FraudAnalysis.SplitingPaymentMethod | Texto | - | Não | Indica se o pagamento esta sendo dividido. Ex: Pagamento com dois cartões.Valores possíveis: SINGLE-PAY e SPLIT-PAY | Opcional |
+| Payment.FraudAnalysis.Browser |  |  |  | Nó contendo as informações do Browser para Análise de Fraude | Obrigatório |
+| Payment.FraudAnalysis.Browser.CookiesAccepted | Booleano | - | Não | Booleano que identifica se o browser do cliente aceita cookies. Default: false | - |
+| Payment.FraudAnalysis.Browser.Email | Texto | 255 | Não | Email do comprador | - |
+| Payment.FraudAnalysis.Browser.HostName | Texto | 60 | Não | Nome do host onde o comprador entrou no site da loja. | - |
+| Payment.FraudAnalysis.Browser.IpAddress | Texto | 15 | Não | Endereço IP do comprador. É altamente recomendável o envio deste campo. | Opcional |
+| Payment.FraudAnalysis.Browser.Type | Texto | 40 | Não | Nome do browser utilizado pelo comprador. | - |
+| Payment.FraudAnalysis.Browser.BrowserFingerPrint | Texto | 6010 | Não | Impressão digital de dispositivos e geolocalização real do IP do comprador. | ObrigatórioConfiguração do Fingerprint |
+| Payment.FraudAnalysis.Cart |  |  |  | Nó contendo as informações do Carrinho para Análise de Fraude | Opcional |
+| FraudAnalysis.IsGift | Booleano | - | Não | Indica se o pedido é para presente ou não. Valor padrão: false | - |
+| FraudAnalysis.ReturnsAccepted | Booleano | - | Não | Indica se devoluções são aceitas para o pedido. Valor padrão: false | - |
+| Payment.FraudAnalysis.Cart.Items[] |  |  |  | Nó contendo as informações dos Itens do Carrinho para Análise de Fraude | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].Type | Texto | - | Não | Tipo do Produto.AdultContent -  Conteúdo adulto.Coupon - Cupon de desconto.Default - Opção padrão para análise.EletronicGood - Produto eletrônico.EletronicSoftware - Softwares distribuídos eletronicamente via download.GiftCertificate - Vale presente.HandlingOnly - Taxa de instalação ou manuseio.Service - Serviço.ShippingAndHandling - Frete e taxa de instalação ou manuseio.ShippingOnly - Frete.Subscription - Assinatura. | - |
+| Payment.FraudAnalysis.Cart.Items[].Name | Texto | 255 | Não | Nome do produto. | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].Risk | Texto | - | Não | Nível de risco do produto.LOW - O produto tem um histórico de poucos chargebacks. NORMAL - O produto tem um histórico de chargebacks considerado normal. HIGH - O produto tem um histórico de chargebacks acima da média. | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].Sku | Texto | 255 | Não | Sku do produto. | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].MerchantItemId | Texto | 255 | Não | ID do produto na loja. | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].UnitPrice | Número | - | Não | Preço unitário do produto em centavos | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].OriginalPrice | Número | - | Não | Preço original do produto em centavos | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].Quantity | Número | - | Não | Quantidade do produto. | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].HostHedge | Texto | - | Não | Nível de importância do e-mail e endereços IP dos clientes em risco de pontuação. Valor padrão: OffLow - Baixa importância do e-mail e endereço IP na análise de risco. Normal - Média importância do e-mail e endereço IP na análise de risco. High - Alta importância do e-mail e endereço IP na análise de risco. Off - E-mail e endereço IP não afetam a análise de risco. | - |
+| Payment.FraudAnalysis.Cart.Items[].NonSensicalHedge | Texto | - | Não | Nível dos testes realizados sobre os dados do comprador com pedidos recebidos sem sentido. Valor padrão: OffLow - Baixa importância da verificação feita sobre o pedido do comprador, na análise de risco. Normal - Média importância da verificação feita sobre o pedido do comprador, na análise de risco. High - Alta importância da verificação feita sobre o pedido do comprador, na análise de risco.Off - Verificação do pedido do comprador não afeta a análise de risco. | - |
+| Payment.FraudAnalysis.Cart.Items[].ObscenitiesHedge | Texto | - | Não | Nível de obscenidade dos pedidos recebedidos. Valor Padrão: OffLow - Baixa importância da verificação sobre obscenidades do pedido do comprador, na análise de risco.Normal - Média importância da verificação sobre obscenidades do pedido do comprador, na análise de risco. High - Alta importância da verificação sobre obscenidades do pedido do comprador, na análise de risco.Off - Verificação de obscenidade no pedido do comprador não afeta a análise de risco. | - |
+| Payment.FraudAnalysis.Cart.Items[].PhoneHedge | Texto | - | Não | Nível dos testes realizados com os números de telefones. Valor padrão: OffLow - Baixa importância nos testes realizados com números de telefone.Normal - Média importância nos testes realizados com números de telefone. High - Alta importância nos testes realizados com números de telefone. Off - Testes de números de telefone não afetam a análise de risco. | - |
+| Payment.FraudAnalysis.Cart.Items[].TimeHedge | Texto | - | Não | Nível de importância da hora do dia do pedido do cliente. Valor padrão: OffLow - Baixa importância no horário do dia em que foi feita a compra, para a análise de risco. Normal - Média importância no horário do dia em que foi feita a compra, para a análise de risco.High - Alta importância no horário do dia em que foi feita a compra, para a análise de risco. Off - O horário da compra não afeta a análise de risco. | - |
+| Payment.FraudAnalysis.Cart.Items[].VelocityHedge | Texto | - | Não | Nível de importância de frequência de compra do cliente. Valor padrão: OffLow - Baixa importância no número de compras realizadas pelo cliente nos últimos 15 minutos.Normal - Média importância no número de compras realizadas pelo cliente nos últimos 15 minutos. High - Alta importância no número de compras realizadas pelo cliente nos últimos 15 minutos.Off - A frequência de compras realizadas pelo cliente não afeta a análise de fraude. | - |
+| Payment.FraudAnalysis.Cart.Items[].GiftCategory | Texto | - | Não | Flag que avaliará os endereços de cobrança e entrega para difrentes cidades, estados ou países. Valor padrão: OffYes - Em caso de divergência entre endereços de cobrança e entrega, marca com riscopequeno. No - Em caso de divergência entre endereços de cobrança e entrega, marca com riscoalto. Off - Ignora a análise de risco para endereços divergentes. | - |
+| Payment.FraudAnalysis.Cart.Items[].GiftMessage | Texto | 50 | Não | Mensagem de presente. | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].Description | Texto | 255 | Não | Descrição do produto. | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].ShippingInstructions | Texto | 255 | Não | Instruções para entrega do item do carrinho. | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].ShippingMethod | Texto | - | Não | Método de entrega do item do carrinho.RedShield: None | SameDay | NextDay | TwoDay | ThreeDay | LowCost | CarrierDesignatedByCustomer | Pickup | International | Military | OtherCyberSource: None | SameDay | OneDay | TwoDay | ThreeDay | LowCost | Pickup | Other | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].ShippingTrackingNumber | Texto | 50 | Não | Número de rastreamento da entrega do item do carrinho. | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].Passenger |  |  |  | Nó contendo as informações do Passageiro para Análise de Fraude |  |
+| Payment.FraudAnalysis.Cart.Items[].PassengerName | Texto | 120 | Não | Nome do passageiro. | OpcionalNome e Sobrenome |
+| Payment.FraudAnalysis.Cart.Items[].Passenger.Identity | Texto | 50 | Não | Identificação do passageiro para quem o bilhete foi emitido | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].Passenger.Status | Texto | 32 | Não | Classificação da empresa aérea (Gold | Platinum) | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].Passenger.Rating | Texto | - | Não | Classificação do Passageiro.Adult - Passageiro adulto.Child - Passageiro criança.Infant - Passageiro infantil.Youth - Passageiro adolescente.Student - Passageiro estudante.SeniorCitizen  - Passageiro idoso.Military  - Passageiro militar. | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].Passenger.Email | Texto | 100 | Não | Email do Passageiro. | Opcional |
+| Payment.FraudAnalysis.Cart.Items[].Passenger.Phone | Texto | 15 | Não | Número do telefone do passageiro. Incluir o código do país. | Opcional |
+| Payment.FraudAnalysis.MerchantDefinedFields[] |  |  |  | Nó contendo dados adicionais para Análise de Fraude | Opcional |
+| Payment.FraudAnalysis.MerchantDefinedFields[].Id | Número | - | Não | Identificador de uma informação adicional a ser enviada. | Opcional |
+| Payment.FraudAnalysis.MerchantDefinedFields[].Value | Texto | 255 | Não | Valor de uma informação adicional a ser enviada. | Opcional |
+| Payment.FraudAnalysis.Shipping |  |  |  | Nó contendo informações adicionais da entrega para Análise de Fraude | Opcional |
+| Payment.FraudAnalysis.Shipping.Addressee | Texto | 255 | Não | Nome do destinatário. | OpcionalNome e Sobrenome |
+| Payment.FraudAnalysis.Shipping.Email | Texto | 255 | Não | Email do destinatário. | Opcional |
+| Payment.FraudAnalysis.ShippingMethod | Texto | - | Não | Método de entrega do pedido.RedShield: None | SameDay | NextDay | TwoDay | ThreeDay | LowCost | CarrierDesignatedByCustomer | Pickup | International | Military | OtherCyberSource: None | SameDay | OneDay | TwoDay | ThreeDay | LowCost | Pickup | Other | Opcional |
+| Payment.FraudAnalysis.Shipping.Phone | Texto | 15 | Não | Telefone do destinatário. | Opcional |
+| Payment.FraudAnalysis.Shipping.WorkPhone | Texto | 15 | Não | Telefone de trabalho do destinatário. | Opcional |
+| Payment.FraudAnalysis.Shipping.Mobile | Texto | 15 | Não | Celular do destinatário. | Opcional |
+| Payment.FraudAnalysis.Shipping.Comment | Texto | 100 | Não | Referência do endereço de entrega do destinatário. | Opcional |
+| Payment.FraudAnalysis.CustomConfiguration |  |  |  | Nó contendo as configurações personalizadas para Análise de Fraude. | Opcional |
+| Payment.FraudAnalysis.CustomConfiguration.RiskAmount | Número | - | Não | Valor de risco do pedido em centavos | Opcional |
+| Payment.FraudAnalysis.CustomConfiguration.MerchantWebsite | Texto | 100 | Não | Endereço Web do site da loja | Opcional |
+| Payment.FraudAnalysis.Travel |  |  |  | Nó contendo as informações da viagem | Opcional |
+| Payment.FraudAnalysis.Travel | Texto | 255 | Não | Rota completa da viagem. Concatenação das pernas (código do aeroporto) de origem e destino da viagem no formato ORIG1- DEST1. Ex.: SFO-JFK:JFK-LHR:LHR-CDG | Opcional |
+| Payment.FraudAnalysis.DepartueTime | Texto | 100 | Não | Data da partida | Opcional |
+| Payment.FraudAnalysis.JourneyType | Texto | 100 | Não | Tipo de viagem. | Opcional |
+| Payment.FraudAnalysis.Origin | Texto | 5 | Não | Código do aeroporto de origem da viagem. | Opcional |
+| Payment.FraudAnalysis.Destination | string | 5 | Não | Código do aeroporto de destino da viagem. | Opcional |
+| Payment.FraudAnalysis.Travel.Legs[] |  |  |  | Nó contendo as informações da rota da viagem | Opcional |
+| Payment.FraudAnalysis.Origin | Texto | 3 | Não | Código do aeroporto do ponto de destino da viagem | Opcional |
+| Payment.FraudAnalysis.Destination | Texto | 3 | Não | Código do aeroporto do ponto de origem da viagem. | Opcional |
