Updated '_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-risco.md' via CloudCannon

--- a/_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-risco.md
+++ b/_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-risco.md
@@ -13,13 +13,21 @@ language_tabs:
 
 # Gateway AF - ReD Shield
 
+Teste
+
 > Na análise de AF, os padrões de siglas para países utilizados nos campos `Country` devem seguir o modelo da ISO 3166-1 ALPHA 3 - https://en.wikipedia.org/wiki/ISO_3166-1_alpha-3
 
 ## Criando uma transação com Análise de Fraude ReD Shield
 
+Teste
+
 Para que a análise de fraude seja efetuada em tempo de transação, é necessário complementar a mensagem com os dados mencionados no nó "FraudAnalysis".
 
+Teste
+
 ### Requisição
+
+Teste
 
 <aside class="request"><span class="method post">POST</span> <span class="endpoint">/1/sales/</span></aside>
 
@@ -227,7 +235,7 @@ curl
 ```
 
 | CAMPOS | TIPO | TAMANHO | OBRIGATÓRIO | DESCRIÇÃO | ANTIFRAUDE REDSHIELD |
-|-------------|--------|----------------|--------------------|----------------|-----------------------------------|
+|--------|------|---------|-------------|-----------|----------------------|
 | MerchantOrderId | Texto | 50 | Sim | Numero de identificação do Pedido. | Obrigatório |
 | Customer.Name | Texto | 255 | Não | Nome do Comprador. | ObrigatórioNome e Sobrenome |
 | Customer.Identity | Texto | 18 | Não | Número do RG, CPF, CNPJ ou Passaporte do Cliente. | Obrigatório |
@@ -357,6 +365,8 @@ curl
 | Payment.FraudAnalysis.Destination | Texto | 3 | Não | Código do aeroporto do ponto de origem da viagem. | Opcional |
 
 ### Resposta
+
+Teste
 
 ```shell
 --header "Content-Type: application/json"
@@ -569,7 +579,7 @@ curl
 | CAMPOS                                                | TIPO   | TAMANHO | DESCRIÇÃO                                                                                                                                           |
 |-------------------------------------------------------|--------|---------|-----------------------------------------------------------------------------------------------------------------------------------------------------|
 | Payment.FraudAnalysis.Id                              | Texto  | 36      | Id da Transação no Antifraude.                                                                                                                      |
-| Payment.FraudAnalysis.Status                          | Número |         | "Status da Análise de Fraude <br> 0 - Unknown<br> 1 - Accept  <br> 2 - Reject <br> 3 - Review<br> 4 - Aborted <br> 5 - Error"                       |
+| Payment.FraudAnalysis.Status                          | Número |         | "Status da Análise de Fraude <br> 0 - Unknown<br> 1 - Accept  <br> 2 - Reject <br> 3 - Review<br> 4 - Aborted <br> 5 - Error                        |
 | Payment.FraudAnalysis.StatusDescription               | Texto  |         | "Descrição do status da Análise de Fraude.    <br> 0 - Unknown   <br> 1 - Accept<br> 2 - Reject <br> 3 - Review  <br> 4 - Aborted    <br> 5 - Error |
 
 > **Payment.FraudAnalysis.ReplyData** - Nó contendo as informações detalhadas da Análise de Fraude
@@ -580,7 +590,12 @@ curl
 | Payment.FraudAnalysis.ReplyData.ReturnMessage         | Texto  | 255     | Descrição do código retornado pelo provider                                                                                                         |
 | Payment.FraudAnalysis.ReplyData.ProviderTransactionId | Texto  | 255     | Identificador da transação no provedor Antifraude.                                                                                                  |
 
+Teste
+
 # Tabelas originais
+
+Teste
+
 
 | CAMPOS | TIPO | TAMANHO | OBRIGATÓRIO | DESCRIÇÃO | ANTIFRAUDE REDSHIELD |
 |-------------|--------|----------------|--------------------|----------------|-----------------------------------|
