Updated '_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-risco.md' via CloudCannon

--- a/_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-risco.md
+++ b/_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-risco.md
@@ -15,11 +15,11 @@ language_tabs:
 
 > Na análise de AF, os padrões de siglas para países utilizados nos campos `Country` devem seguir o modelo da ISO 3166-1 ALPHA 3 - https://en.wikipedia.org/wiki/ISO_3166-1_alpha-3
 
-## Criando uma transação com Análise de Fraude ReD Shield
+**Criando uma transação com Análise de Fraude ReD Shield**
 
 Para que a análise de fraude seja efetuada em tempo de transação, é necessário complementar a mensagem com os dados mencionados no nó "FraudAnalysis".
 
-### Requisição
+**Requisição**
 
 <aside class="request"><span class="method post">POST</span> <span class="endpoint">/1/sales/</span></aside>
 
@@ -358,7 +358,7 @@ curl
 | Payment.FraudAnalysis.Origin | Texto | 3 | Não | Código do aeroporto do ponto de destino da viagem | Opcional |
 | Payment.FraudAnalysis.Destination | Texto | 3 | Não | Código do aeroporto do ponto de origem da viagem. | Opcional |
 
-### Resposta
+**Resposta**
 
 ```shell
 
@@ -585,7 +585,7 @@ curl
 | Payment.FraudAnalysis.ReplyData.ReturnMessage         | Texto  | 255     | Descrição do código retornado pelo provider                                                                                                         |
 | Payment.FraudAnalysis.ReplyData.ProviderTransactionId | Texto  | 255     | Identificador da transação no provedor Antifraude.                                                                                                  |
 
-# Tabelas originais
+**Tabelas originais**
 
 | CAMPOS | TIPO | TAMANHO | OBRIGATÓRIO | DESCRIÇÃO | ANTIFRAUDE REDSHIELD |
 |-------------|--------|----------------|--------------------|----------------|-----------------------------------|
