Updated '_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-risco.md' via CloudCannon

--- a/_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-risco.md
+++ b/_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-risco.md
@@ -11,7 +11,9 @@ language_tabs:
   shell: cURL
 ---
 
-# Gateway AF - ReD Shield
+# teste
+
+Gateway AF - ReD Shield
 
 > Na análise de AF, os padrões de siglas para países utilizados nos campos `Country` devem seguir o modelo da ISO 3166-1 ALPHA 3 - https://en.wikipedia.org/wiki/ISO_3166-1_alpha-3
 
@@ -359,7 +361,7 @@ curl
 
 **Resposta**
 
-```shell
+```
 
 --header "Content-Type: application/json"
 --header "RequestId: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
