Updated '_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
@@ -183,17 +183,39 @@ Abaixo, listamos as collections e os Environments Cielo. Use-as em seu Postman p
 
 ### Api Cielo Ecommerce
 
-* **Collection** -  https://www.getpostman.com/collections/139520c8fe2210654d7c
+#### Collection
+
+* **Link de importação** 
+
+> https://www.getpostman.com/collections/139520c8fe2210654d7c
 
 |Ambiente|Endpoints|
 |---|---|
 |Sandbox|**Envio de transação**:  https://apisandbox.cieloecommerce.cielo.com.br <br> **Consulta transação**: https://apiquerysandbox.cieloecommerce.cielo.com.br/|
 |Produção|**Envio de transação**: https://api.cieloecommerce.cielo.com.br/ <br> **Consulta transação**: https://apiquery.cieloecommerce.cielo.com.br/|
 
+#### Environment
+
+Faça download dos arquivos abaixo e subistitua os MerchantIDs e MerchantKeys pelos os da sua Loja.
+
+* [**Environment Produção**](http://maroon-cavern.cloudvent.net/attachment/postman/3.0 - Produção - Manual.postman_environment.json)
+* [**Environment Sandbox**](http://maroon-cavern.cloudvent.net/attachment/postman/3.0 - Sandbox - Manual.postman_environment.json)
+
+
 ### Checkout Cielo
 
-* **Collection**  - https://www.getpostman.com/collections/97969ec643738aac42f4
+#### **Collection**
+
+* **Link de importação** 
+
+> https://www.getpostman.com/collections/97969ec643738aac42f4
 
 |Ambiente|Endpoints|
 |---|---|
 |Produção|**Envio de transação**: https://cieloecommerce.cielo.com.br/api|
+
+#### Environment
+
+Faça download do arquivo abaixo e subistitua o MerchantID pelo o da sua Loja.
+
+* [**Environment Produção**](http://maroon-cavern.cloudvent.net/attachment/postman/Checkout - Produção - Manual.postman_environment.json)
