Updated '_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
@@ -198,8 +198,7 @@ Abaixo, listamos as collections e os Environments Cielo. Use-as em seu Postman p
 
 Faça download dos arquivos abaixo e subistitua os MerchantIDs e MerchantKeys pelos os da sua Loja.
 
-* [**Environment Produção**](http://maroon-cavern.cloudvent.net/attachment/postman/3.0 - Produção - Manual.postman_environment.json)
-* [**Environment Sandbox**](http://maroon-cavern.cloudvent.net/attachment/postman/3.0 - Sandbox - Manual.postman_environment.json)
+>  [**Environment Produção e Sandbox**](http://maroon-cavern.cloudvent.net/attachment/postman/apicielo.rar)
 
 ### Checkout Cielo
 
@@ -217,4 +216,4 @@ Faça download dos arquivos abaixo e subistitua os MerchantIDs e MerchantKeys pe
 
 Faça download do arquivo abaixo e subistitua o MerchantID pelo o da sua Loja.
 
-* [**Environment Produção**](http://maroon-cavern.cloudvent.net/attachment/postman/Checkout - Produção - Manual.postman_environment.json)
+> [**Environment Produção**](http://maroon-cavern.cloudvent.net/attachment/postman/checkout.rar)
