Updated '_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
@@ -198,7 +198,7 @@ Abaixo, listamos as collections e os Environments Cielo. Use-as em seu Postman p
 
 Faça download dos arquivos abaixo e subistitua os MerchantIDs e MerchantKeys pelos os da sua Loja.
 
-> [**Environment Produção e Sandbox**](http://maroon-cavern.cloudvent.net/attachment/postman/apicielo.rar)
+> [**Environment Produção e Sandbox**](https://github.com/DeveloperCielo/developercielo.github.io/blob/docs/attachment/postman/apicielo.rar)
 
 ### Checkout Cielo
 
@@ -216,4 +216,4 @@ Faça download dos arquivos abaixo e subistitua os MerchantIDs e MerchantKeys pe
 
 Faça download do arquivo abaixo e subistitua o MerchantID pelo o da sua Loja.
 
-> [**Environment Produção**](http://maroon-cavern.cloudvent.net/attachment/postman/checkout.rar)
+> [**Environment Produção**](https://github.com/DeveloperCielo/developercielo.github.io/blob/docs/attachment/postman/checkout.rar)
