Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1681,7 +1681,7 @@ ou
 orderManager.checkoutOrder(orderId, value, paymentCode, installments, email, merchantCode, paymentListener);
 ```
 
-Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com email:
+Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com EC:
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
 
 ## Cancelamento
