Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md
@@ -45,6 +45,8 @@ Não é possível manter duas integrações simultâneas do webservice 1.5 e da 
 Ao realizar o cadastro de uma das integrações junto ao Cielo Ecommerce será necessário escolher entre uma das plataformas
 Para maiores informações acesse: https://www.cielo.com.br/desenvolvedores
 
+> A migração para a API Cielo Ecommerce é **obrigatoria**. O WebService 1.5 foi descontinuado e não possui suporte ou novos desenvolvimentos.
+
 ## 5. Não possuo a integração 1.5, posso utilizar a API Cielo eCommerce?
 
 Sim, a integração da API Cielo eCommerce não depende uma integração previa ao webservice 1.5.
@@ -114,6 +116,8 @@ Sim, as credenciais utilizadas em cada plataforma são diferentes:
 * **MerchantId**: `0d8b08ab-26ea-400e-9a22-47e58057642b`
 * **MerchantKey**: `keR10a0P3R01T0h0C0a0T00U0vsoOy0X0p0Dqyib`
 
+> Caso não saiba suas credenciais, entre em contato com o Suporte Cielo e informer o seu CNPJ/CPF. As credenciais serão enviadas ao e-mail cadastrado.
+
 ## 13. Como consigo as credenciais de cada ambiente?
 
 Existem dois ambientes na API Cielo eCommerce, Sandbox e Produção.
@@ -142,10 +146,10 @@ Para simplificar ao máximo a solução API Cielo eCommerce, a integração é f
 Para realizar testes na API Cielo eCommerce, não é necessário utilizar cartões / meios de pagamentos reais.
 Cada meio de pagamento (Crédito, Débito, boleto e Transferência online) possui uma contra parte simulada.
 
-* C. Crédito - Basta utilizar o Provider "Simulado" e enviar um dos cartões contidos aqui: https://developercielo.github.io/Webservice-3.0/#sandbox
-* Boleto - Será gerado um boleto invalido.
-* C. Debito - Você será redirecionado a uma tela onde poderá selecionar o resultado da operação
-* Transferência online - Você será redirecionado a uma tela onde poderá selecionar o resultado da operação
+* **C. Crédito** - Basta utilizar o Provider "Simulado" e enviar um dos cartões contidos no [Manual de integração](https://developercielo.github.io/manual/cielo-ecommerce)
+* **Boleto** - Será gerado um boleto invalido.
+* **C. Debito** - Você será redirecionado a uma tela onde poderá selecionar o resultado da operação
+* **Transferência online** - Você será redirecionado a uma tela onde poderá selecionar o resultado da operação
 
 ## 18. Existe alguma regra para leitura de cartões?
 
@@ -158,7 +162,7 @@ Ademais, atendidos os requisitos, no momento do credenciamento E-commerce deve s
 
 ## 19. É necessário usar algum certificado em para realizar a conexão com a API Cielo eCommerce
 
-Sim, é necessário realizar a instalação do certificado SSL EV. Mais informações em https://developercielo.github.io/Webservice-3.0/#o-que-é-certificado-ev-ssl
+Sim, é necessário realizar a instalação do certificado SSL EV. Mais informações no [Manual de integração](https://developercielo.github.io/manual/cielo-ecommerce)
 
 ## 20. É necessário algum protocolo de segurança para a utilização da API Cielo eCommerce
 
@@ -186,7 +190,7 @@ Sim, a API possui SDKs para:
 * PHP
 * Python
 
-Mais informações em: https://github.com/DeveloperCielo  
+Mais informações do [repositório Cielo](https://github.com/DeveloperCielo)  
 
 ## 24. A API Cielo eCommerce aceita pagamento com diferentes moedas e cartões internacionais?
 
@@ -212,8 +216,9 @@ Mudanças de status serão notificadas via um POST HTTP direcionado a URL de not
 ## 28. Como posso consultar dados a respeito das minhas vendas?
 
 Será possível consultar via API ou via o portal Cielo:
-* API: Toda transação enviada via POST gera uma URL onde pode ser realizado um GET, onde serão retornados os dados do pedido. Mais informações em: https://developercielo.github.io/Webservice-3.0/#criando-uma-transação-simples
-* Portal Cielo: é possível extrair relatórios e pesquisar pedidos a partir do site Cielo. Mais informações em: www.cielo.com.br
+
+* **API:** Toda transação enviada via POST gera uma URL onde pode ser realizado um GET, onde serão retornados os dados do pedido. Mais informações no [manual de integração](https://developercielo.github.io/manual/cielo-ecommerce)
+* **Portal Cielo:** é possível extrair relatórios e pesquisar pedidos a partir do site Cielo. Mais informações no site [Cielo](www.cielo.com.br)
 
 ## 29. O que é uma transação?
 
@@ -235,6 +240,8 @@ Para vendas na modalidade de Crédito, essa confirmação pode ocorrer em dois m
 
 <aside class="warning"><strong>Atenção!</strong><br /><br />Na modalidade de débito não existe a opção de captura. Toda transação de débito autorizada é capturada automaticamente.</aside>
 
+Para mais informações sobre Captura de transações, acesso o [Manual de integração](https://developercielo.github.io/manual/cielo-ecommerce)
+
 ## 32. É possível cancelar uma transação?
 
 O cancelamento é utilizado quando o lojista decide não efetivar um pedido de compra, seja por insuficiência de estoque, por desistência da compra pelo consumidor, ou qualquer outro motivo. Seu uso faz-se necessário principalmente se a transação estiver capturada, pois haverá débito na fatura do portador, caso ela não seja cancelada.
@@ -247,6 +254,22 @@ Todas as alterações no status de seus pedidos serão notificadas via a URL de 
 Cada meio de pagamento possui diferentes status, podendo variar em relação a informação retornada.
 
 Exemplo: Boletos não possuem retorno para confirmação de pagamento. A conciliação do meio de pagamento deve ser feita pela lojista.
+
+## 34. Onde posso validar os códigos de erro da API
+
+Os códigos de erros da API e do POSTMAN são descritos dentro do [Manual de integração](https://developercielo.github.io/manual/cielo-ecommerce)
+
+## 35. Onde encontro exemplos e coleções do Postman
+
+Todos so exemplos e requisições da API estão disponiveis nos manuais abaixo:
+
+* [Manual de integração](https://developercielo.github.io/manual/cielo-ecommerce)
+* [Tutorial Postman](https://developercielo.github.io/manual/cielo-ecommerce#ferramenta-para-integra%C3%A7%C3%A3o-postman)
+
+## 36. Qual o limite de parcelamento Cielo
+
+O limite de parcelamento da loja depende do cadastro realizado na Afiliação Cielo
+Entre em contato com o Suporte Cielo para maiores informações sobre o seu limite de parcelamento.
 
 # Dúvidas sobre Recursos e Features
 
@@ -314,7 +337,7 @@ Sim, é possível atualizar o intervalo da recorrência inteligente, mas somente
 
 ## 5. Como ocorre a notificação de novas recorrências?
 
-A notificação de transações de recorrência inteligente são as mesmas enviadas para transações padrão. Para mais informações sobre as notificações de transações, acesse: https://developercielo.github.io/Webservice-3.0/#autorizando-a-primeira-recorrência
+A notificação de transações de recorrência inteligente são as mesmas enviadas para transações padrão. Para mais informações sobre as notificações de transações, acesse o [Manual de integração](https://developercielo.github.io/manual/cielo-ecommerce)
 
 ## 6. É possível atualizar dados de uma recorrência? Quais?
 
@@ -358,7 +381,7 @@ Não, para armazenar os tokens não é necessário ser certificado PCI
 
 ## 4.É necessário enviar o CVV para realizar uma transação somente com o token?
 
-Sim, por questão de segurança, a API Cielo eCommerce exige o envio do CVV caso um token seja utilizado para transacionar.
+Não é obrigatório, mas a Afiliação Cielo (EC) deve ter permissão para transacionar sem CVV, caso contrario a transação será negada
 
 # Autenticação
 
@@ -391,7 +414,7 @@ Visa e Mastercard
 ## 2.A análise de fraude é obrigatória?
 
 Não, a análise de fraude ocorre como um adendo ao processo de autorização de cartões de crédito. Basta que o Antifraude esteja habilitado em seu cadastro na Cielo.
-Para mais informações sobre como realizar uma análise de fraude, veja: https://developercielo.github.io/Webservice-3.0/#criando-uma-venda-com-analise-de-fraude
+Para mais informações sobre como realizar uma [análise de fraude](https://developercielo.github.io/manual/cielo-ecommerce#an%C3%A1lise-de-fraude-(af))
 
 ## 3.Caso ocorre um chargeback em uma venda analisada, serei reembolsado?
 
