Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md
@@ -251,9 +251,10 @@ Se a transação estiver apenas autorizada e a loja queira cancelá-la, o pedido
 ## 33. Qual diferença entra a notificação para cada tipo de pagamento?
 
 Todas as alterações no status de seus pedidos serão notificadas via a URL de notificação, que deve ser cadastrada junto a Cielo.
-Cada meio de pagamento possui diferentes status, podendo variar em relação a informação retornada.
+Os meios de pagamento possuem os mesmos Status, apenas sua ordem é alterada.
+Os status e diferenças dos meios de pagamento estão explicadas
 
-Exemplo: Boletos não possuem retorno para confirmação de pagamento. A conciliação do meio de pagamento deve ser feita pela lojista.
+> **Sobre Boletos**: Apenas o boleto registrado Bradesco possui atualização de Status.
 
 ## 34. Onde posso validar os códigos de erro da API
 
